# StockTic

./: .gitignore  pyproject.toml
config/: asgi.py  schema.py  settings.py  urls.py
dashboard/: views.py
finance_reports/: apps.py  forms.py  models.py  urls.py  views.py
finance_reports/migrations/: 0001_initial.py
historical_data/: apps.py  views.py
historical_data/migrations/: 0001_initial.py
notifications/: admin.py  api.py  tasks.py  urls.py
notifications/migrations/: 0001_initial.py
portfolio/: models.py
portfolio/migrations/: 0001_initial.py
services/: utils.py
services/common/: constants.py  mixins.py  utils.py
src/: manage.py
src/config/: asgi.py  celery.py  settings.py  urls.py
src/dashboard/: urls.py  views.py
src/finance_reports/: admin.py
src/historical_data/: admin.py  models.py  urls.py
src/notifications/: api_urls.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/portfolio/: admin.py  models.py  urls.py  views.py
src/static/css/: notification_form.css
src/static/js/: main.js
src/stocks/: consumers.py  models.py
src/stocks/templatetags/: custom_tags.py
src/telegram_bot/: main.py
src/telegram_bot/handlers/: common_handlers.py  notification_handlers.py  registration_handlers.py  ticker_handlers.py
src/templates/dashboard/: dashboard.html
src/templates/finance_reports/: add_asset.html  add_expense.html  add_income.html  add_liability.html  index.html  manage_categories.html
src/templates/historical_data/: historical_data.html
src/templates/includes/: footer.html  head.html  nav.html  (+1 more)
src/tickers/: api.py  api_urls.py  apps.py  models.py  serializers.py  services.py  urls.py
src/users/: api.py  managers.py  serializers.py
src/watchlist/: forms.py  urls.py
stocks/: models.py  urls.py  views.py
stocks/migrations/: 0001_initial.py
stocktic/: docs.py  manage.py
stocktic/config/: asgi.py  base.py  celery.py  dev.py  prod.py  settings.py  urls.py  wsgi.py
stocktic/custom_utils/: utils.py
stocktic/notifications/: admin.py  api.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
stocktic/tickers/: admin.py  api.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
stocktic/users/: api.py  apps.py  managers.py  models.py  serializers.py  urls.py
telegram_bot/: bot_config.py  bot_instance.py  main.py  settings.py  states.py  utils.py
telegram_bot/handlers/: __init__.py  common_handlers.py  notification_handlers.py  registration_handlers.py  ticker_handlers.py  user_handlers.py
telegram_bot/services/: __init__.py  bot_service.py  decorators.py
templates/dashboard/: dashboard.html
templates/finance_reports/: add_asset.html  add_expense.html  add_income.html  add_liability.html  index.html  manage_categories.html
templates/historical_data/: historical_data.html
templates/includes/: head.html  header.html  scripts.html
templates/layout/: base.html
templates/notifications/: notification_confirm_delete.html  notification_form.html  notification_list.html
templates/portfolio/: portfolio_list.html
templates/stocks/: stock_list.html
templates/tickers/: company_profile.html  ticker_list.html
templates/watchlist/: add_ticker.html  confirm_delete.html  create_watchlist.html  watchlist.html  watchlist_detail.html  watchlist_list.html
tickers/: admin.py  forms.py  models.py  services.py  views.py
tickers/data/: nasdaq_screener_1709554808223.csv
tickers/migrations/: 0001_initial.py  0002_remove_ticker_current_price_and_more.py  0003_alter_ticker_industry_alter_ticker_sector.py  0004_alter_ticker_name.py
tickers/templatetags/: market_filters.py  url_filters.py
users/: api.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py
watchlist/: admin.py  forms.py  models.py  urls.py  views.py
watchlist/migrations/: 0001_initial.py  0002_alter_watchlist_options_remove_watchlist_stocks_and_more.py
(+51 files in other folders)
