[tool.poetry]
name = "stocktic"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan <mr.saatchyan@yandex.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg = "^3.1.19"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.1"
channels = "^4.1.0"
celery = "^5.4.0"
redis = "^5.0.4"
daphne = "^4.1.2"
django-filter = "^24.2"
pillow = "^10.3.0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
yfinance = "^0.2.40"
graphene-django = "^3.2.1"
sentry-sdk = "^2.3.1"
django-prometheus = "^2.3.1"
aiogram = "^3.10.0"
djangorestframework-simplejwt = "^5.3.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
