[tool.poetry]
name = "stocktic"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan <mr.saatchyan@yandex.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
psycopg = "^3.2.3"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
redis = "^5.1.1"
drf-yasg = "^1.21.8"
yfinance = "^0.2.44"
aiogram = "^3.13.1"
djangorestframework-simplejwt = "^5.3.1"
pre-commit = "^4.0.1"
django-filter = "^24.3"
pillow = "^11.0.0"
requests = "^2.32.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
