[tool.poetry]
name = "stocktic"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan <mr.saatchyan@yandex.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
psycopg = "^3.2.3"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
redis = "^5.1.1"
drf-yasg = "^1.21.8"
yfinance = "^0.2.44"
aiogram = "^3.13.1"
djangorestframework-simplejwt = "^5.3.1"
pre-commit = "^4.0.1"
django-filter = "^24.3"
pillow = "^11.0.0"
requests = "^2.32.3"
httpx = "^0.27.2"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
pytest = "^8.3.3"

[tool.poetry.extras]
caching = ["redis"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
select = ["D", "E", "PIE", "T20", "PYI", "Q", "RET", "SIM", "PTH"]
respect-gitignore = false
show-fixes = true
target-version = "py312"
exclude = [".venv", "migrations"]
preview = true
line-length = 79

[tool.ruff.lint.pycodestyle]
max-line-length = 79
max-doc-length = 72

[tool.ruff.lint]
select = [
    "D", # pydocstyle (D)
    "E", # pycodestyle (E, W)
    "PIE", # flake8-pie (PIE)
    "T20", # flake8-print (T20)
    "PYI", # flake8-pyi (PYI)
    "Q", # flake8-quotes (Q)
    "RET", # flake8-return (RET)
    "SIM", # flake8-simplify (SIM)
    "PTH", # flake8-use-pathlib (PTH)
    "TD", # flake8-todos (TD)
    "FIX", # flake8-fixmes (FIX)
    "FURB", # refurb (FURB)
    "RUF", # Ruff-specific rules (RUF)
    "C90", # mccabe (C90) (complex-structure)
    "I", # isort (I)
]
ignore = [
    "D417", # Missing argument descriptions in the docstring
    "D415", # First line should end with a period
    "D205", # 1 blank line required between summary line and description
    "D104", # Missing docstring
    "D101", # Missing docstring
    "D102", # Missing docstring
    "D106", # Missing docstring
    "D107", # Missing docstring
    "TD003", # Missing issue link on the line following this TODOs
    "FIX002", # todos found
    "FIX003", # XXX found
    "FIX004", # HACK found
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 79
target-version = ["py312"]
include = "\\.pyi?$"
exclude = "/(\\.venv|build|dist|migrations)/"
